# controller-research

./: .travis.yml  README.md
odrive_interface/: CMakeLists.txt  package.xml
odrive_interface/config/odrive_settings/: march_odrive.json
odrive_interface/config/odrives/: odrives.yaml
odrive_interface/include/odrive_interface/: odrive.hpp  odrive_endpoint.hpp  odrive_enums.hpp  odrive_motor.h  odrive_utils.hpp
odrive_interface/msg/: odrive_msg.msg
odrive_interface/src/: odrive.cpp  odrive_endpoint.cpp  odrive_motor.cpp  odrive_utils.cpp
odrive_interface/src/odrive_interface/: odrive_connection_manager.py  odrive_motor.py
odrive_interface/test/: odrive_interface_test.cpp
