<?xml version="1.0"?>
<package format="2">
  <name>odrive_interface</name>
  <version>0.0.0</version>
  <description>The odrive interface package</description>

  <maintainer email="software@projectmarch.nl">Project March</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>

</package>
